# system-design

./: .gitignore  Cargo.toml  LICENSE  README.md
common/src/: lib.rs
projects/01_url_shortener/: .env.example  Cargo.toml  README.md  docker-compose.yml  justfile
projects/01_url_shortener/docker/: Dockerfile
projects/01_url_shortener/migrations/: 20260314000000_init.sql
projects/01_url_shortener/scripts/: run.py  test.py
projects/01_url_shortener/src/: access.rs  handler.rs  lib.rs  main.rs  manager.rs
projects/01_url_shortener/tests/: integration_test.rs
projects/02_prospect_web_crawler/: .env.example  Cargo.toml  README.md  docker-compose.yml  justfile  robots_txt_compliance_plan.md
projects/02_prospect_web_crawler/migrations/: 20260314000000_init.sql  20260314000001_add_robots_txt_fields.sql
projects/02_prospect_web_crawler/scripts/: run.py  test.py
projects/02_prospect_web_crawler/src/: lib.rs  main.rs
projects/02_prospect_web_crawler/src/commands/: crawl.rs  leads.rs  mod.rs  seed.rs
projects/02_prospect_web_crawler/src/engine/: mod.rs  traits.rs
projects/02_prospect_web_crawler/src/engine/crawl/: engines.rs  frontier.rs  mod.rs
projects/02_prospect_web_crawler/src/engine/extraction/: mod.rs
projects/02_prospect_web_crawler/src/engine/scoring/: mod.rs  scorers.rs
projects/02_prospect_web_crawler/src/manager/: app_manager.rs  mod.rs
projects/02_prospect_web_crawler/src/repository/: mod.rs  models.rs  traits.rs
projects/02_prospect_web_crawler/tests/: logic_tests.rs
projects/02_unique_id_generator/: Cargo.toml  README.md  docker-compose.yml
projects/02_unique_id_generator/docker/: Dockerfile
projects/02_unique_id_generator/src/: main.rs
projects/02_web_crawler/: .env.example  Cargo.toml  README.md  docker-compose.yml  justfile
projects/02_web_crawler/scripts/: run.py  test.py
projects/02_web_crawler/src/: lib.rs  main.rs
projects/02_web_crawler/src/engine/: mod.rs
projects/02_web_crawler/src/engine/crawl/: frontier.rs  mod.rs
projects/02_web_crawler/src/engine/extraction/: mod.rs
projects/02_web_crawler/src/engine/scoring/: mod.rs
projects/02_web_crawler/src/repository/: mod.rs  models.rs
projects/02_web_crawler/tests/: logic_tests.rs
projects/03_kafka_lite/: Cargo.toml  README.md  config.yaml  docker-compose.yml  justfile  kafka_lite_plan.md  log_access_plan.md  unwrap_cleanup_plan.md
projects/03_kafka_lite/docker/: Dockerfile
projects/03_kafka_lite/src/: codec.rs  config.rs  lib.rs  main.rs
projects/03_kafka_lite/src/access/: access_log.rs  mod.rs  registry.rs  segment.rs  topic_log.rs
projects/03_kafka_lite/src/manager/: app_manager.rs
projects/03_kafka_lite/tests/: integration_test.rs  integration_tests.rs
