[package]
name = "web_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
anyhow = "1.0.102"
async-trait = "0.1.89"
argh = "0.1.13"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sha2 = "0.10.8"
bloomfilter = "1.0.16"
regex = "1.11.1"
dotenvy = "0.15.7"
hex = "0.4.3"

[dev-dependencies]
wiremock = "0.6.2"
tokio-test = "0.4.4"
mockall = "0.13.1"
