[package]
name = "kafka_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = "1.11.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
