[package]
name = "kafka_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = "1.11.1"
crc32fast = "1.5.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
config = "0.15.8"
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
